<resources>
    <string name="app_name">RefridgeDate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_sing_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
<<<<<<< HEAD
    <!-- Strings related to forgot password -->
    <string name="prompt_email_forgot">Email</string>
    <string name="prompt_username_forgot">Username</string>
    <string name="action_send_forgot">Send</string>
    <!-- Strings related to social -->
    <string name="action_message_social">Message</string>
    <string name="action_add_friend_social">Add friend</string>
    <!-- Strings related to add friend -->
    <string name="action_search_add_friend">Search</string>
    <!-- Strings related to profile -->
    <string name="text_name_profile">This is Bobs name</string>
    <string name="action_invite_to_household_profile">Invite to household</string>
    <string name="action_recipies_profile">Recipies</string>
    <string name="action_add_remove_profile">Add</string>
    <!-- Strings related to shopping list -->
    <string name="action_add_shopping_list">Add</string>
    <string name="action_remove_shopping_list">Remove</string>
    <!-- Strings related to options -->
    <string name="action_big_font_options">Big fonts</string>
    <string-array name="action_choose_lang_options">
        <item>English</item>
        <item>Swedish</item>
        <item>Korean</item>
    </string-array>
    <!-- Strings related to sing-up -->
=======
>>>>>>> origin/master
    <string name="tempUserName">"Username"</string>
    <string name="tempPassword">"Password"</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email">Email</string>
<<<<<<< HEAD
    <!-- Strings related to  -->
=======

>>>>>>> origin/master
    <string name="action_goto_settings">Settings</string>
    <string name="action_goto_recipes">Recipes</string>
    <string name="action_goto_social">Social</string>
    <string name="action_goto_food_menu">Menu</string>
    <string name="action_goto_shopping_list">Shopping List</string>
    <string name="action_goto_add_item">Add</string>
<<<<<<< HEAD
    <!-- Strings related to  -->
=======

>>>>>>> origin/master
    <string name="recipe_header">Meatballs</string>
    <string name="recipe_list">*Stuff\n*Other stuff\n*Breadcrumbs i guess</string>
    <string name="recipe_instructions">Mix stuffs...yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata yata \n\n fry it\n eat it</string>
    <string name="prompt_add_item_item"></string>
    <string name="prompt_add_item_date"></string>

<<<<<<< HEAD

    <string-array name="day_array">
    <item>Monday</item>
    <item>Tuesday</item>
    <item>Wednesday</item>
    <item>Thursday</item>
    <item>Friday</item>
    <item>Saturday</item>
    <item>Sunday</item>
=======
    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
>>>>>>> origin/master

</resources>
