<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="1.0">

        <Button
            android:text="@string/action_goto_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorButtonTextDark"
            android:id="@+id/goto_social"
            android:backgroundTint="@color/colorButtonDark"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"/>

        <Button
            android:layout_weight="0.25"
            android:textColor="@color/colorButtonTextDark"
            android:text="@string/action_goto_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goto_recipes"
            android:backgroundTint="@color/colorButtonDark"
            android:layout_gravity="center" />

        <Button
            android:layout_weight="0.25"
            android:textColor="@color/colorButtonTextDark"
            android:text="@string/action_goto_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_add_goto"
            android:backgroundTint="@color/colorButtonDark"
            android:layout_gravity="center" />

        <Button
            android:layout_weight="0.25"
            android:textColor="@color/colorButtonTextDark"
            android:text="@string/action_goto_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goto_settings"
            android:backgroundTint="@color/colorButtonDark"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:id="@+id/tableRow2"
        android:weightSum="1.0"
        android:gravity="center">

        <Button
            android:textColor="@color/colorButtonTextDark"
            android:text="@string/action_goto_food_menu"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/goto_menu"
            android:backgroundTint="@color/colorButtonDark"
            android:layout_width="wrap_content" />

        <Button
            android:textColor="@color/colorButtonTextDark"
            android:text="@string/action_goto_shopping_list"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtonDark"
            android:id="@+id/goto_shoppinglist" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recList"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tableRow2" />

</RelativeLayout>