<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLigthBlue"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:layout_width="100dp" />

        <TextView
            android:text="@string/recipe_header"
            android:layout_width="264dp"
            android:layout_height="56dp"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="36sp"
            android:textAlignment="center"
            android:lineSpacingExtra="14sp"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/recipe_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="30sp"
                android:textAlignment="textStart"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>