<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorLigthBlue"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_weight="0.94">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="347dp"
                    android:layout_height="57dp"
                    android:hint="Username"
                    android:layout_gravity="center"
                    android:text="@string/prompt_username_forgot"
                    android:id="@+id/username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="345dp"
                    android:layout_height="59dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="Email"
                    android:layout_gravity="center"
                    android:text="@string/prompt_email_forgot"
                    android:id="@+id/email" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/action_send_forgot"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/send_to_email_button"
            android:backgroundTint="@color/colorButtonColor"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>