<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/login_form"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="net.zerentia.refridgedate.LoginActivity"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:id="@+id/email_ti">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_ti"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/email_ti">

        <EditText
            android:id="@+id/password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password_ti"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorButtonTextDark"
        android:text="Log in"
        android:backgroundTint="@color/colorButtonDark"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1.0">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:id="@+id/sign_up_button"
            android:textColor="@color/colorButtonTextDark"
            android:text="Sign up"
            android:backgroundTint="@color/colorButtonDark"/>
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:textColor="@color/colorButtonTextDark"
            android:text="Forgot"
            android:backgroundTint="@color/colorButtonDark"/>
    </LinearLayout>

</RelativeLayout>
